mobile template : fixed rendering issue for post module where it could render a button partially off-screen

--- a/app/assets/styles/mobile/minireel.css
+++ b/app/assets/styles/mobile/minireel.css
@@ -155,13 +155,18 @@
     .overlay {
         background:rgb(0,0,0); background:rgba(0,0,0,0.8);
         position:absolute; z-index: 1;
-        left:0;
-        width:100%; height:100%; 
+        left:0; top:0; bottom:0;
+        width:100%; 
     }
         .overlay__closeBtn {
             width:1.125em; height:1.125em;
             position: absolute;
-            top:1em; right:1em;
+            top:4em; right:1em;
+        }
+        @media screen and (orientation:landscape) {
+            .overlay__closeBtn {
+                top:1em; right:5em;
+            }
         }
 
 
@@ -964,9 +969,9 @@
     ================================================ */
     .actionsModal__list {
         position:absolute; z-index: 2;
-        top:50%; left:50%;
-        width:36em;
-        margin:-1.5em 0 0 -18em;
+        top:50%; left:5%;
+        width:90%;
+        margin:-1.5em 0 0 0;
         padding:0;
         text-align: center;
         list-style: none;
